# mobile_operation_project

N_Robot/: CMakeLists.txt  NMotionCtrl_ClearEncoderCount_srv.srv~  NMotionCtrl_ReadBatteryVoltage_srv.srv~  NMotionCtrl_ReadMotorVelocity_srv.srv~  NMotionCtrl_SetOrientation.srv~  NMotionCtrl_SetSinglePara.srv~
N_Robot/src/: NMotionCtrl.cpp  UART.cpp  UartNMotion.cpp
N_Robot/srv/: NMotionCtrl_ReadBatteryVoltage_srv.srv  NMotionCtrl_ReadMotorVelocity_srv.srv  NMotionCtrl_ReadUltrasonicData_srv.srv  NMotionCtrl_SavePara_srv.srv  NMotionCtrl_SetOrientation_srv.srv  NMotionCtrl_WaitForSomeTime_srv.srv
N_Robot_Topic/: CMakeLists.txt  package.xml
N_Robot_Topic/msg/: NMotionCtrlTopic_BatteryVoltage_msg.msg  NMotionCtrlTopic_ClearEncoderCount_msg.msg  NMotionCtrlTopic_EncoderCount_msg.msg~  NMotionCtrlTopic_MotionStatus_msg.msg  NMotionCtrlTopic_MotionStatus_msg.msg~  NMotionCtrlTopic_SetInstantVelocity_msg.msg  NMotionCtrlTopic_UltrasonicData_msg.msg  NMotionCtrlTopic_UltrasonicData_msg.msg~  NMotionCtrlTopic_UltrasonicStatus_msg.msg  NMotionCtrlTopic_UltrasonicStatus_msg.msg~  PF_to_DOBOTmsg.msg~
N_Robot_Topic/src/: Algorithm.h  NMotionCtrl.cpp  UART.cpp  UartNMotion.cpp  UartNMotion.h  UserDefine.h
jd_vision/: CMakeLists.txt  JD_parameter.yml  parameter.yml
jd_vision/msg/: Frame.msg  PclMsg.msg  SourceFrame.msg
jd_vision/src/: Synchronizer.cpp  config.cpp  fcn.py  fcn.py~  frame.cpp~  mask_rcnn.py  mask_rcnn.py~  object.cpp~  pcl_bbox.cpp  pcl_bbox.cpp~  point_cloud.cpp~  ps_machinery.cpp
jrc_main/: CMakeLists.txt  package.xml
jrc_main/src/: input.cpp  main_node.cpp  main_topic.cpp  wutileibie.txt
jrc_main/srv/: agv.srv  grasp.srv  input.srv
laser_data_fusion/: CMakeLists.txt  package.xml
laser_data_fusion/src/: new.cpp  two_scans_to_one.cpp  two_scans_to_one_ori.cpp
leo_test/: CMakeLists.txt  camera.launch~  leo_test.launch  leo_test.launch~  sr300_zr300_nodelet_multiple_cameras.launch  sr300_zr300_nodelet_multiple_cameras.launch~
leo_test/src/: main.cpp
robot_base_control/: CMakeLists.txt  package.xml  position.xml  position.xml~
robot_base_control/launch/: read_me  service_move.launch
robot_base_control/src/: new_robot_base_control.cpp  new_robot_base_control.h  robot_base_control.cpp  robot_base_control.h
robot_base_control/srv/: base_goal.srv
robot_base_mapping/: CMakeLists.txt
robot_base_mapping/launch/: mapping.launch  new_mapping.launch
robot_base_mapping/maps/: map.pgm
robot_base_move/: CMakeLists.txt  package.xml
robot_base_move/src/: robot_base_move.cpp  robot_base_move.h
robot_base_move/srv/: base_move.srv
robot_base_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml
robot_base_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
robot_base_navigation/launch/: move_base_blank_map.launch  move_base_blank_map.launch~  navigation.launch  new.launch  (+1 more)
robot_base_odometry/: CMakeLists.txt  package.xml
robot_base_odometry/launch/: laser_scan_matcher.launch
robot_base_odometry/rviz/: scan_matcher.rviz
robot_base_odometry/src/: robot_base_odometry.cpp  robot_base_odometry.cpp~  robot_base_odometry.h
robot_ui/: CMakeLists.txt  config.rviz~  robot.launch~
robot_ui/launch/: robot.launch
robot_ui/src/: robot_ui.cpp  robot_ui.cpp~  robot_ui.h
robot_vision_deal/: CMakeLists.txt  package.xml  sr300_zr300_nodelet_multiple_cameras.launch
test_car/: CMakeLists.txt
(+32 files in other folders)
